# SBC23G07B

./: CMakeLists.txt  diagram.json  sdkconfig
components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
components/thingsboard_connection/: CMakeLists.txt  Kconfig.projbuild  component.mk  connect.c  http.c  http.h
main/: main.c
